tests/ui/lifetimes/lifetime-errors/ex1-return-one-existing-name-early-bound-in-struct.stderr
error[E0621]: explicit lifetime required in the type of `other`
  --> $DIR/ex1-return-one-existing-name-early-bound-in-struct.rs:11:21
   |
LL |     fn bar(&self, other: Foo) -> Foo<'a> {
   |                          --- help: add explicit lifetime `'a` to the type of `other`: `Foo<'a>`
...
LL |                     other
   |                     ^^^^^ lifetime `'a` required

error: aborting due to previous error

For more information about this error, try `rustc --explain E0621`.
